<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:id="@+id/order_item_main_div"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/date"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/date"
        android:id="@+id/start_end_date"
        android:text="@string/start_end_date"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:id="@+id/in_process_tv"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:text="@string/in_process"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/confirm"
            android:background="@color/colorBlack"
            android:textColor="@color/standard_white"
            android:textAllCaps="false"
            android:id="@+id/btn"
            android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorEditTextBG"
        android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</RelativeLayout>